Move impact helper into existing framework utilities with Java 8 support